@startuml

title __VIEWS's Class Diagram__\n

  namespace org.rikh  {
    namespace org.rikh {
      namespace views {

      }
    }
  }


  namespace  org.rikh {
    namespace org.rikh {
      namespace views {
        class org.rikh.views.PokerPane {
            + cardClickAction : EventHandler<MouseEvent>
            + height : double
            + width : double
            + PokerPane()
            + allowSelection()
            + getCardHeight()
            + getCardPaneWidth()
            + getOpponentCardPaneY()
            + getPlayerCardPaneY()
            + showFinalMessage()
            + showText()
            + updateCardStatus()
            + updateLayout()
            + updateOpponentTokens()
            + updatePlayerTokens()
            + updatePotTokens()
            - initialSetup()
            - setupPotArea()
        }

         class org.rikh.views.CardsPane {
                    - cardHeight : double
                    - cardWidth : double
                    - spacing : double
                    + CardsPane()
                    + getCardHeight()
                    + getTotalWidth()
                    + startCardClickListen()
                    + updateCardSelection()
                    - setupCard()
                }

                class org.rikh.views.TokenPane {
                            - spacing : double
                            - tokenCount : int
                            + TokenPane()
                            + getTokenHeight()
                            + getTotalWidth()
                            + updateCoins()
                        }
      }
    }
  }

  org.rikh.views.CardsPane -up-|> javafx.scene.layout.FlowPane
  org.rikh.views.PokerPane -up-|> javafx.scene.layout.Pane
  org.rikh.views.PokerPane o-- org.rikh.views.CardsPane : opponentCardPane
  org.rikh.views.PokerPane o-- org.rikh.views.TokenPane : opponentTokenPane
  org.rikh.views.PokerPane o-- org.rikh.views.CardsPane : playerCardPane
  org.rikh.views.PokerPane o-- org.rikh.views.TokenPane : playerTokenPane
  org.rikh.views.PokerPane o-- org.rikh.views.TokenPane : potTokenPane
  org.rikh.views.TokenPane -up-|> javafx.scene.layout.FlowPane


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
